--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,9 +28,10 @@ jobs:
       - name: Build documentation
         run: |
           source .venv/bin/activate
-          sphinx-build docs docs/_build
+          python -m sphinx docs docs/_build
       - name: Upload documentation artifact
         uses: actions/upload-artifact@v4
         with:
           name: docs-html
           path: docs/_build
+
