--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "act"
 version = "0.1.0"
-description = "Agentic Context: context delta learning for adaptive LLM agents"
+description = "Agentic Context Toolkit: context delta learning for adaptive LLM agents"
 readme = "README.md"
 requires-python = ">=3.12"
 license = {text = "MIT"}
