--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,22 @@ disallow_incomplete_defs = true
 check_untyped_defs = true
 no_implicit_optional = true
 
+[[tool.mypy.overrides]]
+module = [
+    "sqlalchemy",
+    "sqlalchemy.*",
+    "pgvector.*",
+    "tiktoken",
+    "tiktoken.*",
+    "structlog",
+    "openai",
+    "anthropic",
+    "litellm",
+    "redis",
+    "redis.*",
+]
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 minversion = "8.0"
 asyncio_mode = "auto"
