feat: changed ace to act reflecting clear naming

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,11 +78,11 @@ all = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/your-org/agentic-context"
-Documentation = "https://agentic-context.readthedocs.io"
-Repository = "https://github.com/your-org/agentic-context"
-CHANGELOG = "https://github.com/your-org/agentic-context/blob/main/CHANGELOG.md"
-Issues = "https://github.com/your-org/agentic-context/issues"
+Homepage = "https://github.com/lioarce01/agentic-context-toolkit"
+Documentation = "https://github.com/lioarce01/agentic-context-toolkit"
+Repository = "https://github.com/lioarce01/agentic-context-toolkit"
+CHANGELOG = "https://github.com/lioarce01/agentic-context-toolkit/blob/main/CHANGELOG.md"
+Issues = "https://github.com/lioarce01/agentic-context-toolkit/issues"
 
 [tool.black]
 line-length = 100
@@ -143,7 +143,7 @@ module = [
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = "ace.storage.postgres"
+module = "act.storage.postgres"
 disallow_subclassing_any = false
 
 [tool.pytest.ini_options]
@@ -152,14 +152,14 @@ asyncio_mode = "auto"
 testpaths = ["tests"]
 pythonpath = ["."]
 addopts = [
-    "--cov=ace",
+    "--cov=act",
     "--cov-report=term-missing",
     "--cov-report=html",
     "--strict-markers"
 ]
 
 [tool.coverage.run]
-source = ["ace"]
+source = ["act"]
 omit = ["tests/*", "examples/*"]
 
 [tool.coverage.report]
