--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          pytest --cov=ace
+          pytest tests/unit tests/integration --cov=ace --cov-report=term-missing
       - name: Upload coverage artifact
         if: always()
         uses: actions/upload-artifact@v4
