--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "acet"
-version = "1.0.5"
+version = "1.0.6"
 description = "Agentic Context Toolkit: context delta learning for adaptive LLM agents"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -156,7 +156,8 @@ addopts = [
     "--cov=acet",
     "--cov-report=term-missing",
     "--cov-report=html",
-    "--strict-markers"
+    "--strict-markers",
+    "--cov-fail-under=80"
 ]
 
 [tool.coverage.run]
