--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,11 +58,13 @@ dev = [
     "pytest>=8.3",
     "pytest-cov>=6.0",
     "pytest-asyncio>=0.24",
+    "pytest-benchmark>=4.0",
     "mypy>=1.13",
     "ruff>=0.7",
     "black>=24.10",
     "sphinx>=8.0",
-    "sphinx-rtd-theme>=3.0"
+    "sphinx-rtd-theme>=3.0",
+    "matplotlib>=3.9"
 ]
 all = [
     "openai>=1.54",
