--- a/requirements.txt
+++ b/requirements.txt
@@ -30,12 +30,14 @@ llama-index>=0.11
 pytest>=8.3
 pytest-cov>=6.0
 pytest-asyncio>=0.24
+pytest-benchmark>=4.0
 mypy>=1.13
 ruff>=0.7
 black>=24.10
 sphinx>=8.0
 sphinx-rtd-theme>=3.0
 myst-parser>=2.0
+matplotlib>=3.9
 
 # Optional storage integrations
 redis>=5.0
